--- a/BangoPage.html
+++ b/BangoPage.html
@@ -69,7 +69,7 @@
         <h1>MUSILAND</h1>
     </div>
 
-    <h2 class="zero"> <a href="Index.html">Home Page</a> <a href="Products.html">Products Avaliabe</a> <a></a> <a> </a> <a> </a> </h2>
+        <h2 class="zero">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="index.html">Home Page</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="Products.html">Products Avaliabe</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="Website_Review_Page.html">FeedbackForm</a> </h2>
 
     <div class="text">
          <h2 class="one">Bangos
@@ -108,7 +108,23 @@
       </table>
     </div>
     </div>
+
+    <footer>
+     <div class="footer-content">
+         <p>&copy; 2025 Musiland. All rights reserved.</p><br>
+         <p> Visit our social media</p>
+         <ul class="social-links">
+         <li><a href="https://facebook.com">www.facebook.com/Musiland</a></li>
+         <li><a href="https://twitter.com">twitter.com/Musiland</a></li>
+         <li><a href="https://instagram.com">instagram.com/Musiland</a></li>
+         </ul>
+     </div>
+     <div class="footer-contact">
+         <p>Contact us at: <a href="mailto:support@musiland.com">support@musiland.com</a></p>
+     </div>
+   </footer>
     
 
 
 </body>
+</html>
