--- a/Products.html
+++ b/Products.html
@@ -79,7 +79,7 @@
                          <a href="SaxophonePage.html" class="box-link">
                              <img class="instrument-img" src="Saxophone.jpg" alt="Saxophone">
                              <div class="instrument-name">Saxophone</div>
-                             <div class="seller-info">Seller: Joseph's Music Store<br>Rating: ⭐⭐⭐⭐/5</div>
+                             <div class="seller-info">Seller: Speedwagon Foundation<br>Rating: ⭐⭐⭐⭐/5</div>
                          </a>
                       </td>
                       <td>
