--- a/SaxophonePage.html
+++ b/SaxophonePage.html
@@ -76,7 +76,7 @@
          </h2>
 
          <div class="header">
-      <div class="seller-info">Sold by: Joseph's Music Store &nbsp;|&nbsp; Rating: ⭐⭐⭐⭐/5</div>
+      <div class="seller-info">Sold by: SpeedWagon Foundation &nbsp;|&nbsp; Rating: ⭐⭐⭐⭐/5</div>
     </div>
 
     <img class="instrument-img" src="Saxophone.jpg" alt="Guitar">
