--- a/Guitarpage.html
+++ b/Guitarpage.html
@@ -68,7 +68,7 @@
         <h1>MUSILAND</h1>
     </div>
 
-       <h2 class="zero">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="index.html">Home Page</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="Products.html">Products Avaliabe</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="Website_Review_Page.html">FeedbackForm</a> </h2>
+       <h2 class="zero">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="Index.html">Home Page</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="Products.html">Products Avaliabe</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="Website_Review_Page.html">FeedbackForm</a> </h2>
     <div class="text">
          <h2 class="one">Guitar
             <hr class="fade-line">
