--- a/Website_Review_Page.html
+++ b/Website_Review_Page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>MUSILAND Feedback Page</title>
+    <title>MUSILAND FEEDBACK PAGE</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='Webstyle1.css'>
     <script src='main.js'></script>
